# drone-swarm-simulator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
benchmarks/: benchmark_avoidance.py  benchmark_simulation.py
scripts/: run_visualizer.py
src/drone_sim/: boundaries.py  collisions.py  config.py  metrics.py  movement.py  scenarios.py  simulation.py  spatial_hash.py  state.py  trajectory.py  validation.py  visualization.py
tests/: test_benchmark_avoidance.py  test_boundaries.py  test_collisions.py  test_movement.py  test_scenarios.py  test_simulation.py  test_spatial_hash.py  test_trajectory.py  test_validation.py  test_visualization.py
